delete simulator which is not used

--- a/config-gpu.yaml
+++ b/config-gpu.yaml
@@ -2,6 +2,6 @@ trainingInput:
   scaleTier: CUSTOM
   masterType: standard_gpu
   workerType: standard_gpu
-  parameterServerType: standard_gpu
+  parameterServerType: standard
   workerCount: 4
   parameterServerCount: 3
