long time no see

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
+gym[atari]
 numpy
-https://storage.googleapis.com/tensorflow/mac/cpu/tensorflow-0.10.0-py2-none-any.whl
+pillow
+scikit-image
+scipy
+tensorflow
