--- a/Pipfile
+++ b/Pipfile
@@ -17,3 +17,4 @@ python_version = "3.6"
 
 [scripts]
 train-cartpole = "python -m  trainer.task_cartpole"
+train-metaltile = "python -m  trainer.task_metaltile"
