--- a/Pipfile
+++ b/Pipfile
@@ -19,3 +19,4 @@ python_version = "3.6"
 train-cartpole = "python -m  trainer.task_cartpole"
 train-metaltile = "python -m  trainer.task_metaltile"
 train-metaltile-cloud = "bash scripts/metaltile_cloud.sh"
+play-cartpole = "python -m utils.play_game --env CartPole-v1 --export_dir sample-models/CartPole-v1/models/episode-4970"
